// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CelebrateItem message renders accepted challenge event 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John accepted a Challenge
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders completed challenge event 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John completed a Challenge
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders other interaction event 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John had a Spiritual Conversation.
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders personal decision interaction event 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John saw someone make a Personal Decision.
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders something cool happened event 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John saw something cool happen with someone.
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders step of faith event with stage 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John completed a Step of Faith with a Forgiven person.
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem message renders step of faith event without stage 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      >
        John completed a Step of Faith with someone.
      </MyText>
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=false, like count=0 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      />
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=false, like count>0 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      />
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        >
          1
        </MyText>
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem renders event for subject=me, liked=true, like count>0 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      />
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        >
          1
        </MyText>
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-blue.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem renders event for subject=other, liked=false, like count=0 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      />
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-grey.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;

exports[`CelebrateItem renders event for subject=other, liked=true, like count>0 1`] = `
<Card>
  <Flex
    direction="row"
    style={
      Object {
        "padding": 16,
      }
    }
    value={1}
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        JOHN SMITH
      </MyText>
      <Translate(DateComponent)
        date="2004-04-04 00:00:00 UTC"
        format="LT"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      />
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
            "paddingTop": 12,
          }
        }
      />
    </Flex>
    <Flex
      align="start"
      direction="column"
    >
      <Flex
        align="center"
        direction="row"
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#505256",
              "fontSize": 14,
            }
          }
        />
        <Button
          name="likeActiveIcon"
          onPress={[Function]}
          style={
            Array [
              Object {
                "height": 24,
                "margin": 0,
                "width": 24,
              },
            ]
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/heart-blue.png",
              }
            }
          />
        </Button>
      </Flex>
    </Flex>
  </Flex>
</Card>
`;
